header section completed

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kids School</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Hello World!!</h1>
-</body>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://kit.fontawesome.com/cfdd49a500.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="container navbar">
+        <div class="nav-logo">
+          <img src="assets/logo.png" alt="Site Logo" />
+          <p class="text-black">SCHOOL</p>
+        </div>
+        <ul class="nav-items">
+          <li><a href="#" class="nav-links text-primary">Home</a></li>
+          <li><a href="#" class="nav-links text-secondary">About</a></li>
+          <li><a href="#" class="nav-links text-tertiary">Facilities</a></li>
+          <li><a href="#" class="nav-links text-quaternary">Admission</a></li>
+        </ul>
+        <div class="nav-btn">
+          <button class="btn bg-primary text-white">Contact</button>
+         <button class="btn btn-icon">
+            <i class="fa-solid fa-bars"></i>
+         </button>
+        </div>
+      </nav>
+    </header>
+
+    
+  </body>
 </html>
