hero section completed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kids School</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://kit.fontawesome.com/cfdd49a500.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/cfdd49a500.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -22,13 +25,32 @@
         </ul>
         <div class="nav-btn">
           <button class="btn bg-primary text-white">Contact</button>
-         <button class="btn btn-icon">
+          <button class="btn btn-icon">
             <i class="fa-solid fa-bars"></i>
-         </button>
+          </button>
         </div>
       </nav>
     </header>
-
-    
+    <main>
+      <section class="hero-section container">
+        <div class="hero-content">
+          <h1>
+            <span class="text-primary"> Empowering</span><br />
+            students from small<br />
+            age
+            <span class="text-secondary"> towards vision</span>
+          </h1>
+          <p class="text-black">
+            With the courage, Confidence, Creativity and Compassion to make
+            <br />
+            their Unique Contribution in a Diverse and Dynamic World.
+          </p>
+          <button class="btn bg-black text-white">Enroll Now</button>
+        </div>
+        <div class="hero-image">
+          <img src="assets/hero-kids.png" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
