--- a/index.html
+++ b/index.html
@@ -51,6 +51,52 @@
           <img src="assets/hero-kids.png" />
         </div>
       </section>
+      <section class="curriculum-section">
+        <div class="container">
+          <h3 class="section-heading">Standard Curriculum</h3>
+          <div class="curriculum-cards">
+            <div class="curriculum-card">
+              <div>
+                <img src="assets/kinder.png" alt="" />
+              </div>
+              <h3>Kinder (3-6) Years</h3>
+              <p>
+                A nurturing space for young learners to explore, grow, and build foundational skills.
+              </p>
+              <button class="btn text-secondary">Read More</button>
+            </div>
+            <div class="curriculum-card">
+              <div>
+                <img src="assets/elementary.png" alt="" />
+              </div>
+              <h3>Elementary School</h3>
+              <p>
+                Empowering students with knowledge, creativity, and teamwork in a supportive environment.
+              </p>
+              <button class="btn text-primary">Read More</button>
+            </div>
+            <div class="curriculum-card">
+              <div>
+                <img src="assets/middle.png" alt="" />
+              </div>
+              <h3>Middle (10-16) Years</h3>
+              <p>
+                Guiding pre-teens through academics, independence, and personal development for success.
+              </p>
+              <button class="btn text-quaternary">Read More</button>
+            </div>
+            
+          </div>
+          <div class="btn-group"> 
+            <button class="btn bg-primary text-white">
+              <i class="fa-solid fa-chevron-left"></i>
+            </button>
+            <button class="btn bg-primary text-white">
+              <i class="fa-solid fa-chevron-right"></i>
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
