--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
               </div>
               <h3>Kinder (3-6) Years</h3>
               <p>
-                A nurturing space for young learners to explore, grow, and build foundational skills.
+                A nurturing space for young learners to explore, grow, and build
+                foundational skills.
               </p>
               <button class="btn text-secondary">Read More</button>
             </div>
@@ -71,7 +72,8 @@
               </div>
               <h3>Elementary School</h3>
               <p>
-                Empowering students with knowledge, creativity, and teamwork in a supportive environment.
+                Empowering students with knowledge, creativity, and teamwork in
+                a supportive environment.
               </p>
               <button class="btn text-primary">Read More</button>
             </div>
@@ -81,13 +83,13 @@
               </div>
               <h3>Middle (10-16) Years</h3>
               <p>
-                Guiding pre-teens through academics, independence, and personal development for success.
+                Guiding pre-teens through academics, independence, and personal
+                development for success.
               </p>
               <button class="btn text-quaternary">Read More</button>
             </div>
-            
           </div>
-          <div class="btn-group"> 
+          <div class="btn-group">
             <button class="btn bg-primary text-white">
               <i class="fa-solid fa-chevron-left"></i>
             </button>
@@ -97,6 +99,71 @@
           </div>
         </div>
       </section>
+      <section class="stories-section">
+        <div class="container">
+          <h3 class="section-heading">Our Stories</h3>
+          <div class="stories-cards">
+            <figure class="stories-card">
+              <div>
+                <img src="assets/story-1.png" alt="" />
+              </div>
+              <div class="stories-content">
+                <div class="stories-date">November 19, 2019</div>
+                <h4>A fun toddler coloring training on <br> classroom</h4>
+                <p>
+                  Beautiful branding for changes by Never Now in Australia. <br>
+                  changes is a platform for open discussion in an inclusive and
+                  collaborative environment, providing the...
+                </p>
+              </div>
+            </figure>
+            <div class="stories-cards-2nd">
+              <figure class="stories-card">
+                <div>
+                  <img src="assets/story-2.png" alt="" />
+                </div>
+                <div class="stories-content">
+                  <div class="stories-date">November 19, 2019</div>
+                  <h4>Find out if a school fits the family&apos;s needs</h4>
+                </div>
+              </figure>
+              <figure class="stories-card">
+                <div>
+                  <img src="assets/story-3.png" alt="" />
+                </div>
+                <div class="stories-content">
+                  <div class="stories-date">November 19, 2019</div>
+                  <h4>Summer math & literacy centres for kids</h4>
+                </div>
+              </figure>
+              <figure class="stories-card">
+                <div>
+                  <img src="assets/story-4.png" alt="" />
+                </div>
+                <div class="stories-content">
+                  <div class="stories-date">September 10, 2019</div>
+                  <h4>Classroom management techniques for new tutors</h4>
+                </div>
+              </figure>
+              <figure class="stories-card">
+                <div>
+                  <img src="assets/story-5.png" alt="" />
+                </div>
+                <div class="stories-content">
+                  <div class="stories-date">July 19, 2019</div>
+                  <h4>Conversation rhymes improve kids listening</h4>
+                </div>
+              </figure>
+            </div>
+          </div>
+          <div class="stories-action">
+            <button class="btn bg-black text-white">View All</button>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="container footer-contents"></div>
+    </footer>
   </body>
 </html>
