--- a/index.html
+++ b/index.html
@@ -109,9 +109,13 @@
               </div>
               <div class="stories-content">
                 <div class="stories-date">November 19, 2019</div>
-                <h4>A fun toddler coloring training on <br> classroom</h4>
+                <h4>
+                  A fun toddler coloring training on <br />
+                  classroom
+                </h4>
                 <p>
-                  Beautiful branding for changes by Never Now in Australia. <br>
+                  Beautiful branding for changes by Never Now in Australia.
+                  <br />
                   changes is a platform for open discussion in an inclusive and
                   collaborative environment, providing the...
                 </p>
@@ -163,7 +167,40 @@
       </section>
     </main>
     <footer>
-      <div class="container footer-contents"></div>
+      <div class="container footer-contents">
+        <div class="footer-details">
+          <div class="footer-logo">
+            <img src="assets/footer.png" alt="" />
+            <p>
+              Kids <br />
+              Education
+            </p>
+          </div>
+          <p>
+            A vibrant place where young minds blossom, creativity thrives, and
+            lifelong learning begins in a caring and joyful environment.
+          </p>
+        </div>
+        <div class="footer-links">
+          <h5 class="footer-title">About School</h5>
+          <ul>
+            <li><a href="@">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="">Facilities</a></li>
+            <li><a href="">Admission</a></li>
+          </ul>
+        </div>
+        <div class="footer-contact">
+          <h5 class="footer-title">Keep In Touch</h5>
+          <div class="social-links">
+            <img src="assets/fb.png" alt="" />
+            <img src="assets/dribble.png" alt="" />
+            <img src="assets/twitter.png" alt="" />
+            <img src="assets/google+.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <marquee class="text-white">Copyright &copy; 2025</marquee>
     </footer>
   </body>
 </html>
